test/grammar/schema/type/type_fail_default_value_0/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:3:5
  |
3 |     firstName: int = "John"
  |     ^ expected int, got str(John)
  |